Create EvalBexpr and EvalAexpr

--- a/WhileAbstractInterpreter.fsproj
+++ b/WhileAbstractInterpreter.fsproj
@@ -26,6 +26,8 @@
     <Compile Include="Parser/Parser.fs" />
     <Compile Include="Parser/Lexer.fs"/>
     <Compile Include="AbstractState/AbstractState.fs" />
+    <Compile Include="Evaluator/EvalAexpr.fs" />
+    <Compile Include="Evaluator/EvalBexpr.fs" />
     <Compile Include="Evaluator/Eval.fs" />
     <Compile Include="Program.fs" />
 
